feat: Build Lambda Function Resources for /issue-certificate (#9)
* feat: add issue-reader-cert specification to open-api-specs

* style: format openApi spec

* feat: add resources for issue reader cert lambda to application template

* feat: add handler for issue reader cert lambda

* fix: add api gateway integration to open-api-spec

* fix: add IssueReaderCerService permission to application template

* test: add tests for issue-reader-cert handler

* fix: resolve linting issue

* fix: resolve sonar issue

* style: format code

* fix: resolve failing test

* fix: resolve sonar issue
